--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 Django==5.2
+django-tailwind==4.0.1
 django-unfold==0.52.0
 djangorestframework==3.16.0
 h11==0.14.0
