--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.7.0
+anyio==4.9.0
 arrow==1.3.0
 asgiref==3.8.1
 attrs==25.1.0
@@ -14,7 +16,9 @@ django-sslserver==0.22
 django-tailwind==4.0.1
 django-unfold==0.52.0
 djangorestframework==3.16.0
-h11==0.14.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
 markdown-it-py==3.0.0
@@ -23,17 +27,21 @@ mdurl==0.1.2
 mypy_extensions==1.1.0
 mysqlclient==2.2.7
 numpy==2.2.4
+ollama==0.4.8
 outcome==1.3.0.post0
 packaging==25.0
 pandas==2.2.3
 pathspec==0.12.1
 pillow==11.2.1
 platformdirs==4.3.7
+pydantic==2.11.3
+pydantic_core==2.33.1
 Pygments==2.19.1
 PyMySQL==1.1.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-dotenv==1.1.0
 python-slugify==8.0.4
 pytz==2025.2
 PyYAML==6.0.2
@@ -48,6 +56,7 @@ text-unidecode==1.3
 trio==0.29.0
 trio-websocket==0.12.2
 types-python-dateutil==2.9.0.20241206
+typing-inspection==0.4.0
 typing_extensions==4.13.0
 tzdata==2025.2
 urllib3==2.3.0
