--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mypy_extensions==1.1.0
+mysqlclient==2.2.7
 numpy==2.2.4
 ollama==0.4.8
 outcome==1.3.0.post0
@@ -36,6 +37,7 @@ platformdirs==4.3.7
 pydantic==2.11.3
 pydantic_core==2.33.1
 Pygments==2.19.1
+PyMySQL==1.1.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
@@ -60,5 +62,3 @@ tzdata==2025.2
 urllib3==2.3.0
 websocket-client==1.8.0
 wsproto==1.2.0
-PyMySQL>=1.0.2
-gunicorn
